--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,8 @@
 ---
-layout: default
+layout: base
 ---
-
-<main>{{ content }}</main>
+<article>
+  <h1>{{ page.title }}</h1>
+  <p><i><time datetime="{{ page.date }}">{{ page.date | date_to_string: "ordinal", "US" }}</time></i></p>
+  {{ content }}
+</article>
