--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: base
 ---
 <article>
   <h1>{{ page.title }}</h1>
-  <p><i><time datetime="{{ page.date }}">{{ page.date | date_to_string: "ordinal", "US" }}</time></i></p>
+  <p><i><time datetime="{{ page.date }}">{{ page.date | date: "%B %-d, %Y" }}</time></i></p>
   {{ content }}
 </article>
