--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,7 @@
   <title>The Frontendian</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Inconsolata|Karla:400,700" rel="stylesheet">
+  <link rel="shortcut icon" href="/favicon-32.png">
   <style>
     html, body {
       margin: 0;
