Add Apple and MS favicon styles.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,16 @@
   <title>The Frontendian</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Inconsolata|Karla:400,700" rel="stylesheet">
+
+  <!-- Favicons -->
+
   <link rel="shortcut icon" href="/favicon-32.png">
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="/msapplication-tileimage.png">
+
+  <!-- Styling -->
+
   <style>
     html, body {
       margin: 0;
