--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,15 @@
 layout: base
 ---
 <article>
-  <h1>{{ page.title }}</h1>
-  <p><i><time datetime="{{ page.date }}">{{ page.date | date: "%B %-d, %Y" }}</time></i></p>
+  <figure>
+    <img width="100%" style="max-width: 180px; max-height: 180px;" src="{{ page.hero }}" />
+  </figure>
+  <h1 class="mb-4 align-middle">{{ page.title }}</h1>
+  <p style="font-size: 3rem; text-align: center; font-family: Cardo;"><i><time datetime="{{ page.date }}">{{ page.date | date: "%B %-d, %Y" }}</time></i></p>
+  <p style="font-family: Cardo; margin-bottom: 4rem; text-align: center;">~</p>
   {{ content }}
 </article>
+{% if page.comments %}
+<div id="disqus_thread"></div>
+{% endif %}
+
