--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -249,7 +249,7 @@
     <div class="footer-body">
       <div class="footer-description">
         <p>The Frontendian is a little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more.</p>
-        <p>Made with ☕ in Seattle.</p>
+        <p>Made with ☕ in Seattle by <a href="https://twitter.com/andryanmiller" target="_blank">Ryan Miller</a>.</p>
       </div>
     </div>
   </footer>
