Add OG type tag.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,6 +25,7 @@
   {% if page.excerpt %}
   <meta property="og:description" content="{{ page.excerpt | remove: '<p>' | remove: '</p>' }}" />
   {% endif %}
+  <meta property="og:type" content="website" />
 
   <!-- Syntax Highlighting -->
 
