--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,7 +30,7 @@
   {% if page.excerpt %}
   <meta property="og:description" content="{{ page.excerpt | remove: '<p>' | remove: '</p>' }}" />
   {% else %}
-  <meta property="og:description" content="The Frontendian is a little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more." />
+  <meta property="og:description" content="A little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more." />
   {% endif %}
 
   <meta property="og:type" content="website" />
@@ -271,7 +271,7 @@
     </div>
     <div class="footer-body">
       <div class="footer-description">
-        <p>The Frontendian is a little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more.</p>
+        <p>A little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more.</p>
         <p>Made with ☕ in Seattle by <a href="https://twitter.com/andryanmiller" target="_blank">Ryan Miller</a>.</p>
       </div>
     </div>
