--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -62,6 +62,7 @@
       font-size: 6px;
       -webkit-font-smoothing: antialiased;
       line-height: 1.75;
+      word-break: break-word;
     }
 
     a {
@@ -93,6 +94,11 @@
       margin: 5rem 0 0 0;
       max-width: 50rem;
       font-size: 2rem;
+    }
+
+    figcaption a {
+      font-size: 2rem;
+      margin: 0;
     }
 
     p {
