--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -51,7 +51,7 @@
   <meta name="twitter:title" content="the frontendian" />
   {% endif %}
 
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:site:id" content="thefrontendian" />
   <meta name="twitter:creator:id" content="andryanmiller" />
 
@@ -174,6 +174,10 @@
 
     .footer-link-rss {
       background-image: url(/public/svg/icons/rss.svg)
+    }
+
+    .footer-link-twitter {
+      background-image: url(/public/svg/icons/twitter.svg)
     }
 
     @media screen and (max-width: 640px) {
@@ -303,10 +307,12 @@
     .mb-1 { margin-bottom: 1rem !important; }
     .mb-2 { margin-bottom: 2rem !important; }
     .mb-3 { margin-bottom: 3rem !important; }
+    .mt-4 { margin-top: 4rem !important; }
     .ma-4 { margin: 4rem !important; }
     .mb-4 { margin-bottom: 4rem !important; }
     .mb-5 { margin-bottom: 5rem !important; }
     .mb-6 { margin-bottom: 6rem !important; }
+    .mt-8 { margin-top: 8rem !important; }
 
     /* Disqus */
     #disqus_thread {
@@ -344,8 +350,9 @@
       </div>
     </div>
     <div class="footer-links">
+      <a href="https://twitter.com/thefrontendian" class="footer-link footer-link-twitter" target="_blank"></a>
       <a href="/feed.xml" class="footer-link footer-link-rss"></a>
-      <a href="mailing-list" class="footer-link footer-link-mailing-list"></a>
+      <a href="/mailing-list" class="footer-link footer-link-mailing-list"></a>
     </div>
   </footer>
 
