Giving myself a bit more time to write these posts.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -345,7 +345,7 @@
     </div>
     <div class="footer-body">
       <div class="footer-description">
-        <p>A little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more.</p>
+        <p>A little blog about building web applications. Posts arrive bi-weekly on performance, security, accessibility, tooling, and more.</p>
         <p>Made with ☕ in Seattle by <a href="https://twitter.com/andryanmiller" target="_blank">Ryan Miller</a>.</p>
       </div>
     </div>
