fix translation links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,11 +20,11 @@ layout: base
   </time></i></p>
   {% if page.translations %}
   <div class="translation-icons">
-    <a class="ma-1" href="/{{ page.permalink }}">
+    <a class="ma-1" href=".{{ page.permalink }}">
       <img src="/public/svg/icons/en-us.svg" width="20" />
     </a>
     {% for language in page.translations %}
-    <a class="ma-1" href="/{{ page.permalink }}-{{language}}">
+    <a class="ma-1" href=".{{ page.permalink }}-{{language}}">
         <img src="/public/svg/icons/{{language}}.svg" width="20" />
       </a>
     {% endfor %}
