--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -321,6 +321,7 @@
 
     /* Utilities */
     .mb-0 { margin-bottom: 0 !important; }
+    .ma-1 { margin: 1rem !important; }
     .mb-1 { margin-bottom: 1rem !important; }
     .mb-2 { margin-bottom: 2rem !important; }
     .mb-3 { margin-bottom: 3rem !important; }
@@ -330,17 +331,22 @@
     .mb-5 { margin-bottom: 5rem !important; }
     .mb-6 { margin-bottom: 6rem !important; }
     .mt-8 { margin-top: 8rem !important; }
-
     /* Disqus */
     #disqus_thread {
       margin: 4rem 0 0 0;
     }
-
     /* HighlightJS */
     .hljs {
       background-color: #FAFAFA;
       padding: 6rem;
     }
+    
+    .translation-icons {
+      margin: 3rem;
+      display: flex;
+      justify-content: center;
+    }
+  
   </style>
 </head>
 <body>
