--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -216,7 +216,7 @@
 
     .footer-body {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
     }
 
     @media screen and (max-width: 640px) {
