--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,10 @@
     gtag('js', new Date());
     gtag('config', 'UA-44427723-6');
   </script>
+  
+  <!-- Site24x& RUM -->
+  
+  <script type="text/javascript">var rumMOKey='fc91d126f2321caa83be4062f34ff856';(function(){if(window.performance && window.performance.timing && window.performance.navigation) {var site24x7_rum_beacon=document.createElement('script');site24x7_rum_beacon.async=true;site24x7_rum_beacon.setAttribute('src','//static.site24x7rum.com/beacon/site24x7rum-min.js?appKey='+rumMOKey);document.getElementsByTagName('head')[0].appendChild(site24x7_rum_beacon);}})(window)</script>
 
   <!-- Basic Metadata -->
 
