Minor updates to HTTP caching post.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -52,7 +52,7 @@
   <meta name="twitter:title" content="the frontendian" />
   {% endif %}
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site:id" content="thefrontendian" />
   <meta name="twitter:creator:id" content="andryanmiller" />
 
