--- a/views/base.pug
+++ b/views/base.pug
@@ -31,6 +31,7 @@ html(lang="en")
     
     //- Styles
     block styles
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,700|Inconsolata:400,700|Karla:400,700&display=swap")
     link(rel="stylesheet" href="/css/styles.css")
   body
     header
